2007-07-05  Sebastien Pouliot  <sebastien@ximian.com>

	* BigInteger.cs: Reduce modulo steps in Multiply. Add #if/#else around
	older, and commented, [Odd|Even]Pow methods.

2007-07-04  Sebastien Pouliot  <sebastien@ximian.com>

	* BigInteger.cs: In some condition the optimized (4 variants) OddPow
	expose a bug, mainly with small numbers. This simpler version, square
	and multiply, doesn't expose as much the bug (almost all new prime 
	tests pass).

2007-07-03  Sebastien Pouliot  <sebastien@ximian.com>

	* BigInteger.cs: Avoid Miller-Rabin test for small primes (we have a 
	complete list of them) in IsProbablePrime.

2007-07-03  Sebastien Pouliot  <sebastien@ximian.com> 

	* BigInteger.cs: Fix possible IndexOutOfRangeException inside method
	IsProbablePrime for small values.

2007-07-03  Sebastien Pouliot  <sebastien@ximian.com>

	* BigInteger.cs: Fix check on IsProbablePrime not to exclude the last
	element of the small primes. Patch by Kazuki (#81857).

2004-12-03  Sebastien Pouliot  <sebastien@ximian.com>

	* BigInteger.cs: Fix issue #70169 in ModPow when modulus is a power of
	two.

2004-10-19  Sebastien Pouliot  <sebastien@ximian.com>

	* BigInteger.cs: Fix issue #68452 when Randomize was being called on a
	0 BigInteger (i.e. BitCount == 0).

2004-09-17  Sebastien Pouliot  <sebastien@ximian.com>

	* BigInteger.cs: In sync with corlib. This fix level 4 warnings about
	CLSCompliant.

2004-05-07  Sebastien Pouliot  <sebastien@ximian.com>

	* BigInteger.cs: Faster scan of smallPrimes in IsProbablePrime. 
	Commented the methods OddModTwoPow and EvenModTwoPow as they are broken
	in some cases (well tested primes test case). 
	
2004-04-22  Sebastien Pouliot  <sebastien@ximian.com>

	* BigInteger.cs: FxCop-ized. CLS compliance.

2004-02-23  Sebastien Pouliot  <sebastien@ximian.com>

	* BigInteger.cs: Corrected isProbablePrime by removing the redundant 
	loop. Fix #54750.

2004-02-13  Sebastien Pouliot  <sebastien@ximian.com>
